# oreokey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  appcast.xml
.github/workflows/: release.yml
app/: Info.plist  Package.swift
app/Sources/COreoKey/: module.modulemap
app/Sources/OreoKey/: AppDelegate.swift  Core.swift  InputSource.swift  Onboarding.swift  SettingsWindow.swift  Updater.swift  main.swift
assets/: AppIcon.icns
core/: Cargo.toml  build.rs
core/src/: config.rs  ffi.rs  lib.rs
core/src/engine/: censor.rs  encoding.rs  macros.rs  mod.rs  spell.rs  syllable.rs  telex.rs  vni.rs
core/src/platform/: ax.rs  event_tap.rs  ghost.rs  inject.rs  mod.rs  profiles.rs
data/: app-profiles.json
docs/: dict-sweep-report.md  install.md  testing-checklist.md  user-guide.md
docs/superpowers/plans/: 2026-07-08-oreokey-v1.md  2026-07-08-sparkle-auto-update.md  2026-07-09-che-do-go-thoai-mai.md  2026-07-10-typing-behavior-improvements.md
docs/superpowers/specs/: 2026-07-08-oreokey-design.md  2026-07-08-sparkle-auto-update-design.md  2026-07-09-che-do-go-thoai-mai-design.md  2026-07-09-uo-horn-with-final-vowel-design.md  2026-07-10-typing-behavior-improvements-design.md
include/: oreokey.h
scripts/: build.sh  dmg-settings.py  make-dmg-background.py  make-dmg.sh  make-icon.swift  release.sh  roll-changelog.py  update-appcast.py
