[package]
name = "oreokey-core"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OreoSolutions/oreokey"
description = "Bộ gõ tiếng Việt cho macOS — engine (Telex/VNI)"
publish = false

[lib]
name = "oreokey_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
foreign-types = "0.5"
libc = "0.2"
